--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^22.15.21",
     "db-migrate": "^0.11.14",
     "db-migrate-mysql": "^3.0.0",
+    "express-validator": "^7.2.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
